Make Fabled's ignoreDivinity option the only option (no more knockback)

--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
             <groupId>com.github.Pwing-Minecraft</groupId>
             <artifactId>PwingRaces-API</artifactId>
             <!--version>-SNAPSHOT FIXME</version-->
-            <version>-51bee492b4-1</version>
+            <version>192e401884</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
