--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <description>Custom items, combat, and more!</description>
 
     <properties>
-        <codex.version>1.0.1-R0.15-SNAPSHOT</codex.version>
+        <codex.version>1.1.0-R0.1-SNAPSHOT</codex.version>
         <fabled.version>1.0.4-R0.8-SNAPSHOT</fabled.version>
     </properties>
 
@@ -59,6 +59,19 @@
             <groupId>studio.magemonkey</groupId>
             <artifactId>fabled</artifactId>
             <version>${fabled.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>${mysql.version}</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
