--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <description>Custom items, combat, and more!</description>
 
     <properties>
-        <codex.version>1.0.1-R0.15-SNAPSHOT</codex.version>
+        <codex.version>1.1.0-R0.1-SNAPSHOT</codex.version>
         <fabled.version>1.0.4-R0.8-SNAPSHOT</fabled.version>
     </properties>
 
@@ -39,6 +39,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.mockbukkit.mockbukkit</groupId>
+            <artifactId>mockbukkit-v1.21</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.20.6-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.mojang</groupId>
             <artifactId>authlib</artifactId>
         </dependency>
@@ -59,6 +71,19 @@
             <groupId>studio.magemonkey</groupId>
             <artifactId>fabled</artifactId>
             <version>${fabled.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>${mysql.version}</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
