--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,4 +14,4 @@ updates:
     reviewers:
       - Travja
     ignore:
-      - dependency-name: "spigot-api"
+      - dependency-name: "org.spigotmc:spigot-api"
